# docs/swagger.yaml
@@ -1,20 +1,5 @@
 basePath: /
 definitions:
-  models.Activity:
-    properties:
-      action:
-        type: string
-      created_at:
-        type: string
-      details:
-        type: string
-      id:
-        type: integer
-      task_id:
-        type: integer
-      user_id:
-        type: integer
-    type: object
   models.Comment:
     properties:
       content:
@@ -790,55 +775,6 @@ paths:
       security:
       - BearerAuth: []
       summary: Get task activities
-      tags:
-      - Activities
-    post:
-      consumes:
-      - application/json
-      description: Create an activity entry for a task. Only the assigned employee
-        or project manager can create activity.
-      parameters:
-      - description: Task ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Activity details
-        in: body
-        name: activity
-        required: true
-        schema:
-          $ref: '#/definitions/models.Activity'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/utils.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/utils.Response'
-      security:
-      - BearerAuth: []
-      summary: Create task activity
       tags:
       - Activities
   /api/tasks/{id}/comments:
